--- a/public/chat.html
+++ b/public/chat.html
@@ -11,14 +11,14 @@
 <body>
 
     <div class="chat">
-        <div class="chat__sidebar">
+        <div id="sidebar" class="chat__sidebar">
 
         </div>
         <div class="chat__main">
             <div id="messages" class="chat__messages"></div>
             <div class="compose">
                 <form action="" id="message-form">
-                    <input name="message" placeholder="Message">
+                    <input name="message" placeholder="Message" required autocomplete="off">
                     <button>Send</button>
                 </form>
                 <button id="send-location">Send Location</button>
@@ -32,7 +32,7 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some User Name</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message_meta">{{createdAt}}</span>
             </p>
             <p> {{message}}</p>
@@ -41,11 +41,21 @@
     <script id="location-message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some User Name</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message_meta">{{createdAt}}</span>
             </p>
             <p><a href="{{url}}" target="_blank">My Current Location</a></p>
         </div>
+    </script>
+
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">Room: {{room}}</h2>
+        <h3 class="list-title">User List</h3>
+        <ul class=users>
+            {{#users}}
+            <li>{{username}}</li>
+            {{/users}}
+        </ul>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
